--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name</title>
+  <title>CV | Your Name</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -13,16 +13,20 @@
     <h1>Your Name</h1>
   </div>
   <nav>
+    <a href="index.html">Home</a>
     <a href="cv.html">CV</a>
-    <a href="publications.html">Publications</a>
     <a href="projects.html">Projects</a>
   </nav>
 </header>
 
 <main class="container">
-  <p>
-    Short introduction. Purpose of the site. Minimal.
-  </p>
+  <h2>Curriculum Vitae</h2>
+
+  <p><strong>Position</strong><br>
+  Institution, Year</p>
+
+  <p><strong>Education</strong><br>
+  Degree, Institution</p>
 </main>
 
 </body>
