--- a/cv.html
+++ b/cv.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CV | Your Name</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="container header">
-  <div class="title">
-    <h1>Your Name</h1>
+<header>
+  <div class="container header">
+    <div class="title">
+      <h1>Your Name</h1>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="publications.html">Publications</a>
+      <a href="cv.html">CV</a>
+      <a href="projects.html">Projects</a>
+    </nav>
   </div>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="publications.html">Publications</a>
-    <a href="projects.html">Projects</a>
-  </nav>
 </header>
 
 <main class="container">
-  <h2>Curriculum Vitae</h2>
-
-  <p><strong>Position</strong><br>
-  Institution, Year</p>
-
-  <p><strong>Education</strong><br>
-  Degree, Institution</p>
+  <section>
+    <h2>Curriculum Vitae</h2>
+    <p><strong>Position:</strong> Institution, Years</p>
+    <p><strong>Education:</strong> Degree, Institution, Year</p>
+    <p><strong>Other Experience:</strong> Description</p>
+  </section>
 </main>
+
+<footer class="container footer">
+  <p>© 2026 Your Name</p>
+</footer>
 
 </body>
 </html>
