--- a/index.html
+++ b/index.html
@@ -1,29 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Home | Your Name</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="container header">
-  <div class="title">
-    <h1>Your Name</h1>
+<header>
+  <div class="container header">
+    <div class="title">
+      <h1>Your Name</h1>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="publications.html">Publications</a>
+      <a href="cv.html">CV</a>
+      <a href="projects.html">Projects</a>
+    </nav>
   </div>
-  <nav>
-    <a href="cv.html">CV</a>
-    <a href="publications.html">Publications</a>
-    <a href="projects.html">Projects</a>
-  </nav>
 </header>
 
 <main class="container">
-  <p>
-    Short introduction. Purpose of the site. Minimal.
-  </p>
+  <section>
+    <h2>About Me</h2>
+    <p>Brief introduction about yourself. Keep it short and readable.</p>
+  </section>
+
+  <section>
+    <h2>Highlights</h2>
+    <ul class="list">
+      <li>
+        <a href="#">Project Example 1</a>
+        <span>Short description</span>
+      </li>
+      <li>
+        <a href="#">Project Example 2</a>
+        <span>Short description</span>
+      </li>
+    </ul>
+  </section>
 </main>
+
+<footer class="container footer">
+  <p>© 2026 Your Name</p>
+</footer>
 
 </body>
 </html>
