--- a/publications.html
+++ b/publications.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Publications | Your Name</title>
+  <title>Publications | Marien Chenaud</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <header>
   <div class="container header">
     <div class="title">
-      <h1>Your Name</h1>
+      <h1>Marien Chenaud</h1>
     </div>
     <nav>
       <a href="index.html">Home</a>
@@ -24,22 +24,33 @@
 
 <main class="container">
   <section>
-    <h2>Selected Publications</h2>
+    <h2>Conference Articles</h2>
     <ul class="list">
       <li>
         <a href="#">Paper 1</a>
-        <span>Journal/Conference, Year</span>
+        <span>Conference, Year</span>
       </li>
       <li>
         <a href="#">Paper 2</a>
-        <span>Journal/Conference, Year</span>
+        <span>Conference, Year</span>
+      </li>
+    </ul>
+    <h2>Journal Articles</h2>
+    <ul class="list">
+      <li>
+        <a href="#">Paper 1</a>
+        <span>Journal, Year</span>
+      </li>
+      <li>
+        <a href="#">Paper 2</a>
+        <span>Journal, Year</span>
       </li>
     </ul>
   </section>
 </main>
 
 <footer class="container footer">
-  <p>© 2026 Your Name</p>
+  <p>© 2026 - M Chenaud</p>
 </footer>
 
 </body>
