--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CV | Your Name</title>
+  <title>CV | Marien Chenaud</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <header>
   <div class="container header">
     <div class="title">
-      <h1>Your Name</h1>
+      <h1>Marien Chenaud</h1>
     </div>
     <nav>
       <a href="index.html">Home</a>
@@ -23,16 +23,19 @@
 </header>
 
 <main class="container">
-  <section>
-    <h2>Curriculum Vitae</h2>
-    <p><strong>Position:</strong> Institution, Years</p>
-    <p><strong>Education:</strong> Degree, Institution, Year</p>
-    <p><strong>Other Experience:</strong> Description</p>
-  </section>
+<section>
+  <h2>Curriculum Vitae</h2>
+  <p>You can download or view my CV here:</p>
+  <p>
+    <a href="assets/cv.pdf" target="_blank" class="pdf-link">Download CV</a>
+  </p>
+</section>
+
+
 </main>
 
 <footer class="container footer">
-  <p>© 2026 Your Name</p>
+  <p>© 2026 - M Chenaud</p>
 </footer>
 
 </body>
