--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Home | Your Name</title>
+  <title>Home | Marien Chenaud</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <header>
   <div class="container header">
     <div class="title">
-      <h1>Your Name</h1>
+      <h1>Marien Chenaud</h1>
     </div>
     <nav>
       <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
 <main class="container">
   <section>
     <h2>About Me</h2>
-    <p>Brief introduction about yourself. Keep it short and readable.</p>
+    <p>PhD student at CentraleSupélec and Transvalor, I'm focusing on developing ML-driven surrogate models for complex physical processes. I am an engineer from CentraleSupélec with a Master's Degree in Probability, Statistics and Machine Learning from Paris Saclay University. </p>
   </section>
 
   <section>
@@ -41,10 +41,24 @@
       </li>
     </ul>
   </section>
+
+  <section>
+    <h2>Contact</h2>
+    <ul class="list">
+      <li>
+        <a href="#">e-mail</a>
+        <span></span>
+      </li>
+      <li>
+        <a href="#">Linkedin</a>
+        <span></span>
+      </li>
+    </ul>    
+  </section>
 </main>
 
 <footer class="container footer">
-  <p>© 2026 Your Name</p>
+  <p>© 2026 - M Chenaud</p>
 </footer>
 
 </body>
