--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Projects | Your Name</title>
+  <title>Projects | Marien Chenaud</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 <header>
   <div class="container header">
     <div class="title">
-      <h1>Your Name</h1>
+      <h1>Marien Chenaud</h1>
     </div>
     <nav>
       <a href="index.html">Home</a>
@@ -39,7 +39,7 @@
 </main>
 
 <footer class="container footer">
-  <p>© 2026 Your Name</p>
+  <p>© 2026 - M Chenaud</p>
 </footer>
 
 </body>
