--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 
 <header>
   <div class="container header">
+
+    <div class="profile-photo">
+      <img src="assets/photo_page.png" alt="MC">
+    </div>
+
     <div class="title">
       <h1>Marien Chenaud</h1>
     </div>
+
     <nav>
       <a href="index.html">Home</a>
       <a href="publications.html">Publications</a>
