--- a/index.html
+++ b/index.html
@@ -34,33 +34,35 @@
     <p>PhD student at CentraleSupélec and Transvalor, I'm focusing on developing ML-driven surrogate models for complex physical processes. I am an engineer from CentraleSupélec with a Master's Degree in Probability, Statistics and Machine Learning from Paris Saclay University. </p>
   </section>
 
-  <section>
-    <h2>Highlights</h2>
-    <ul class="list">
-      <li>
-        <a href="#">Project Example 1</a>
-        <span>Short description</span>
-      </li>
-      <li>
-        <a href="#">Project Example 2</a>
-        <span>Short description</span>
-      </li>
-    </ul>
-  </section>
+<section>
+  <h2>My Projects</h2>
+  <ul class="list">
+    <li>
+      <a href="#">Scientific Machine Learning</a>
+      <span>
+        A comprehensive review of the key concepts in Scientific Machine Learning, designed for non-specialist practitioners.  
+        Explore the full code and resources in the 
+        <a href="#" target="_blank" rel="noopener">GitHub repository</a>, and the <a href="#" target="_blank" rel="noopener">paper preprint</a>.
+      </span>
+    </li>
+  </ul>
+</section>
 
-  <section>
-    <h2>Contact</h2>
-    <ul class="list">
-      <li>
-        <a href="#">e-mail</a>
-        <span></span>
-      </li>
-      <li>
-        <a href="#">Linkedin</a>
-        <span></span>
-      </li>
-    </ul>    
-  </section>
+
+<section>
+  <h2>Contact</h2>
+  <ul class="list">
+    <li>
+      <a href="mailto:your.email@example.com">Email</a>
+      <span>Feel free to reach out for collaborations, questions, or professional inquiries.</span>
+    </li>
+    <li>
+      <a href="https://www.linkedin.com/in/yourprofile" target="_blank" rel="noopener">LinkedIn</a>
+      <span>You can also connect with me on LinkedIn.</span>
+    </li>
+  </ul>    
+</section>
+
 </main>
 
 <footer class="container footer">
